# hobo

./: .pylintrc  README.md  hobo-example.ipynb  pyproject.toml  requirement.txt
hobo_toolbox/: __init__.py  data.py  file.py
