[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hobo-toolbox"
version = "2024.0.0"
dependencies = [
  "pandas",
  "pint",
  "pint-pandas"
]

requires-python = ">=3.8"
authors = [
  {name = "Marc Oggier", email = "marc.oggier@megavolts.ch"},
]
maintainers = [
  {name = "Marc Oggier", email = "marc.oggier@megavolts.ch"},
]
description = "Toolbox to parse hobo sensor"
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["hobo", "temperature logger"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python"
]
